cmake_minimum_required(VERSION 3.16)
project(rtcmbridge VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(NATS_ROOT "${CMAKE_SOURCE_DIR}/third_party/nats/install" CACHE PATH "Local nats.c install prefix")

function(set_tool_output target_name)
  set_target_properties(${target_name} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
endfunction()

find_package(Threads REQUIRED)

set(_nats_local_lib "")
if(EXISTS "${NATS_ROOT}/lib/libnats.a")
  set(_nats_local_lib "${NATS_ROOT}/lib/libnats.a")
elseif(EXISTS "${NATS_ROOT}/lib/libnats.dylib")
  set(_nats_local_lib "${NATS_ROOT}/lib/libnats.dylib")
elseif(EXISTS "${NATS_ROOT}/lib/libnats.so")
  set(_nats_local_lib "${NATS_ROOT}/lib/libnats.so")
endif()

if(EXISTS "${NATS_ROOT}/include/nats/nats.h" AND NOT "${_nats_local_lib}" STREQUAL "")
  add_library(NATS::nats UNKNOWN IMPORTED)
  set_target_properties(NATS::nats PROPERTIES IMPORTED_LOCATION "${_nats_local_lib}")
  target_include_directories(NATS::nats INTERFACE "${NATS_ROOT}/include")
  message(STATUS "Using local nats.c from ${NATS_ROOT}")
else()
  find_package(PkgConfig QUIET)
  if(PkgConfig_FOUND)
    pkg_check_modules(NATS QUIET libnats)
  endif()

  if(NATS_FOUND)
    add_library(NATS::nats INTERFACE IMPORTED)
    target_include_directories(NATS::nats INTERFACE ${NATS_INCLUDE_DIRS})
    target_link_libraries(NATS::nats INTERFACE ${NATS_LIBRARIES})
    message(STATUS "Using system libnats via pkg-config")
  else()
    find_library(NATS_LIBRARY nats)
    if(NATS_LIBRARY)
      add_library(NATS::nats UNKNOWN IMPORTED)
      set_target_properties(NATS::nats PROPERTIES IMPORTED_LOCATION "${NATS_LIBRARY}")
      message(STATUS "Using system libnats from linker path")
    else()
      message(FATAL_ERROR "libnats not found. Build/install nats.c in third_party/nats/install or install libnats in the system")
    endif()
  endif()
endif()

add_executable(rtcm_bridge src/tools/rtcm_bridge.cpp)
target_link_libraries(rtcm_bridge PRIVATE Threads::Threads NATS::nats)
set_tool_output(rtcm_bridge)

add_executable(rtcm_decoder_ntrip src/tools/rtcm_decoder_ntrip.cpp)
target_link_libraries(rtcm_decoder_ntrip PRIVATE Threads::Threads)
set_tool_output(rtcm_decoder_ntrip)

add_executable(rtcm_decoder_nats src/tools/rtcm_decoder_nats.cpp)
target_link_libraries(rtcm_decoder_nats PRIVATE Threads::Threads NATS::nats)
set_tool_output(rtcm_decoder_nats)
